--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@500;700&display=swap');
+
 :root {
     --cor-fundo: #0A0A0F;
     --cor-principal: #1B1F3B;
