--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Importando fontes */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Orbitron:wght@500;700&display=swap');
 
 :root {
@@ -8,9 +8,8 @@
     --cor-destaque: #FF4C60;
     --cor-texto: #F0F0F5;
 
-    --fonte-principal: 'Roboto', sans-serif;     /* corpo do texto */
-    --fonte-titulo: 'Orbitron', sans-serif;      /* títulos futuristas */
-}
+    --fonte-principal: 'Roboto', sans-serif;     
+    --fonte-titulo: 'Orbitron', sans-serif;      
 
 body {
     background-color: var(--cor-fundo);
